Expose local savings clarity
